Fixed the mobile header jump on the other pages

--- a/_extend.less
+++ b/_extend.less
@@ -5582,6 +5582,34 @@ div.nav-sections-item-content {
 		}
 	}
 }
+@media @mq-m {
+  .catalog-product-view{
+    .page-header {
+      position: fixed;
+    }
+    .navigation-wrapper {
+      margin-top: 110px;
+    }
+    .breadcrumbs {
+      margin-bottom: 0;
+    }
+    main.page-main {
+      margin-top: 0;
+    }
+  }
+  .customer-account-login {
+    .page-main {
+      margin-top: 100px;
+    }
+  }
+  .cms-page-view {
+    .page-wrapper {
+      .page-main {
+        margin-top:20px;
+      }
+    }
+  }
+}
 
 .block-search {
 	padding-left: 6px;
